# dv-imu-cam-calibration

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh
docs/: template_dv_project.xml  tutorial.md
include/dv-imu-cam-calibration/kalibr_calibrate_cameras/: CameraCalibrator.hpp
include/dv-imu-cam-calibration/kalibr_common/: ConfigReader.hpp
include/dv-imu-cam-calibration/kalibr_imu_camera_calibration/: common.hpp  iccCalibrator.hpp  iccCamera.hpp  iccImu.hpp  iccSensors.hpp
include/dv-imu-cam-calibration/utilities/: Calibrator.hpp  CalibratorBase.hpp  calibrator.hpp
src/: CMakeLists.txt
src/kalibr_calibrate_cameras/: CMakeLists.txt  CameraCalibrator.cpp
src/kalibr_common/: CMakeLists.txt  ConfigReader.cpp
src/kalibr_imu_camera_calibration/: CMakeLists.txt  common.cpp  iccCalibrator.cpp  iccSensors.cpp
src/modules/: CMakeLists.txt  ImuCamCalibration.cpp  MarkersDrawing.cpp
src/tests/: CMakeLists.txt  testCalibrator.cpp  testIccCalibrator.cpp
src/tests/test_files/1.98-1-1.8-fisheye/imu/: 1649777190977361.txt  1649777190978360.txt  1649777190981355.txt  1649777190987346.txt  1649777190988344.txt  1649777190991340.txt  1649777190993336.txt  1649777190995333.txt  1649777190996332.txt  1649777190997330.txt  1649777190998329.txt  1649777190999327.txt  1649777191000326.txt  1649777191001324.txt  1649777191006316.txt  1649777191008313.txt  1649777191020295.txt  1649777191022292.txt  1649777191024289.txt  1649777191025287.txt  1649777191030279.txt  1649777191034273.txt  1649777191035272.txt  1649777191036270.txt  1649777191037268.txt  1649777191039265.txt  1649777191042261.txt  1649777191044258.txt  1649777191049250.txt  1649777191052245.txt  1649777191053244.txt  1649777191056239.txt  1649777191057238.txt  1649777191060233.txt  1649777191061231.txt  1649777191062230.txt  1649777191063228.txt  1649777191065225.txt  1649777191069219.txt  1649777191073213.txt  (+15247 more)
src/tests/test_files/event_mono/imu/: imu_1618495107366368.txt  imu_1618495107381317.txt  imu_1618495107396266.txt  imu_1618495107421181.txt  imu_1618495107436130.txt  imu_1618495107456063.txt  imu_1618495107490944.txt  imu_1618495107495927.txt  imu_1618495107505893.txt  imu_1618495107530808.txt  imu_1618495107565689.txt  imu_1618495107635452.txt  imu_1618495107640435.txt  imu_1618495107685282.txt  imu_1618495107774977.txt  imu_1618495107784943.txt  imu_1618495107799892.txt  imu_1618495107814841.txt  imu_1618495107829791.txt  imu_1618495107834774.txt  imu_1618495107839757.txt  imu_1618495107864672.txt  imu_1618495107909519.txt  imu_1618495107939417.txt  imu_1618495107954366.txt  imu_1618495107964333.txt  imu_1618495107989248.txt  imu_1618495108009180.txt  imu_1618495108039078.txt  imu_1618495108049044.txt  imu_1618495108093892.txt  imu_1618495108118807.txt  imu_1618495108123790.txt  imu_1618495108188569.txt  imu_1618495108193552.txt  imu_1618495108248366.txt  imu_1618495108278264.txt  imu_1618495108313150.txt  imu_1618495108353010.txt  imu_1618495108372942.txt  (+224 more)
src/tests/test_files/fisheye/imu/: 1649777190976363.txt  1649777190979358.txt  1649777190980357.txt  1649777190982353.txt  1649777190983352.txt  1649777190984350.txt  1649777190985349.txt  1649777190986347.txt  1649777190989343.txt  1649777190990341.txt  1649777190992338.txt  1649777190994335.txt  1649777191002323.txt  1649777191003321.txt  1649777191004319.txt  1649777191005318.txt  1649777191007315.txt  1649777191009312.txt  1649777191010310.txt  1649777191011309.txt  1649777191012307.txt  1649777191013306.txt  1649777191014304.txt  1649777191015302.txt  1649777191016301.txt  1649777191017299.txt  1649777191018298.txt  1649777191019296.txt  1649777191021293.txt  1649777191023290.txt  1649777191026285.txt  1649777191027284.txt  1649777191028282.txt  1649777191029281.txt  1649777191031278.txt  1649777191032276.txt  1649777191033275.txt  1649777191038267.txt  1649777191040264.txt  1649777191041262.txt  (+19454 more)
src/tests/test_files/imu/: imu_1618225930845843.txt  imu_1618225930850826.txt  imu_1618225930855809.txt  imu_1618225930860791.txt  imu_1618225930865774.txt  imu_1618225930870757.txt  imu_1618225930875739.txt  imu_1618225930880722.txt  imu_1618225930885705.txt  imu_1618225930890687.txt  imu_1618225930895670.txt  imu_1618225930900652.txt  imu_1618225930905635.txt  imu_1618225930910618.txt  imu_1618225930915600.txt  imu_1618225930920583.txt  imu_1618225930925566.txt  imu_1618225930930548.txt  imu_1618225930935531.txt  imu_1618225930940514.txt  imu_1618225930945496.txt  imu_1618225930950479.txt  imu_1618225930955461.txt  imu_1618225930960444.txt  imu_1618225930965427.txt  imu_1618225930970409.txt  imu_1618225930975392.txt  imu_1618225930980375.txt  imu_1618225930985357.txt  imu_1618225930990340.txt  imu_1618225930995323.txt  imu_1618225931000305.txt  imu_1618225931005288.txt  imu_1618225931010270.txt  imu_1618225931015253.txt  imu_1618225931020236.txt  imu_1618225931025218.txt  imu_1618225931030201.txt  imu_1618225931035184.txt  imu_1618225931040166.txt  (+2125 more)
src/tests/test_files/stereo/imu/: 1648829087875627.txt  1648829087876625.txt  1648829087877624.txt  1648829087878623.txt  1648829087879621.txt  1648829087880620.txt  1648829087881619.txt  1648829087882617.txt  1648829087883616.txt  1648829087884615.txt  1648829087885613.txt  1648829087886612.txt  1648829087887611.txt  1648829087888609.txt  1648829087889608.txt  1648829087890607.txt  1648829087891605.txt  1648829087892604.txt  1648829087893603.txt  1648829087894601.txt  1648829087895600.txt  1648829087896599.txt  1648829087897598.txt  1648829087898596.txt  1648829087899595.txt  1648829087900594.txt  1648829087901592.txt  1648829087902591.txt  1648829087903590.txt  1648829087904588.txt  1648829087905587.txt  1648829087906586.txt  1648829087907584.txt  1648829087908583.txt  1648829087909582.txt  1648829087910580.txt  1648829087911579.txt  1648829087912578.txt  1648829087913576.txt  1648829087914575.txt  (+4411 more)
src/utilities/: CMakeLists.txt  calibrator.cpp
